test/positive/feature_referencecasts.java

public class feature_referencecasts {
  public feature_referencecasts() {}
  public feature_referencecasts m(Object x) {
    return (feature_referencecasts)x;
  }
}
